@@ -1,5 +1,6 @@
 DIST kadu-0.6.0.3.tar.bz2 1609595 RMD160 7a8e27a352dc6d40ff8305e130eacafec7ee4831 SHA1 9e56402d272e09bda32f46f1b963acb1d76c9eb6 SHA256 36e7d276403c47ee5da120d92a7d1cb8c5676ad079b4e7d3f168b9e7d083b167
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-history-0.6.0.3.ebuild 213 RMD160 1d1471950366633d03f811be8a582df19e4e95b8 SHA1 33cdc27411293c74fc6c4c7910a5aad630096762 SHA256 745bfed0284ad2b7cc58f0b708d74710db0fabd890ad607e84e4034ebfa9e2de
-EBUILD kadu-history-0.6.5.ebuild 150 RMD160 f84522c7e5368c39691f17bd27739ca04b6ee0b5 SHA1 ff5e085f3470c2761017b462b4ac3fae3d20327f SHA256 311bb189781306c358a1a3e185af8fc1b39d4c5daedfb8592f3766ff92c1ecd9
-MISC ChangeLog 888 RMD160 4d8ac6fd030a3fca0ab7d2940cb9021b3319e5f5 SHA1 3f62d95cf7db45806f86cfb02a542b5d6d84071b SHA256 130a4f34487fcd4d36dae377159929f0c04266c2a9debb82e26693d36d3210d6
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-history-0.6.0.3.ebuild 342 RMD160 b18b764544cf55c5c59561e97fff9ac8e0c8a0f4 SHA1 38a0fa1daa78551971c8f34ab3109addabe5f5b2 SHA256 435247d994a6b359ee06e04852a6a142d1222c95cc167d460f6c074a977cfb0b
+EBUILD kadu-history-0.6.5.1.ebuild 244 RMD160 bf54b65377c700e4e3baa24bd770a3ef08db8d42 SHA1 480a6f0adaf75366d517b0576703ad1c37a5434b SHA256 a4dccb175821e0438f452191fb19a80fc773dfd6bbc1fbaccf5413e4ec52b60e
+MISC ChangeLog 1100 RMD160 42f61e4a5600f79fd7c3330cd1816a2f1fb4bf46 SHA1 5c27f8cb78e16f235b6c9a016753a9ef6843cb1b SHA256 b7313d1910e89eb89e1d89616621d417d66430c69b75ba60eda5ed010a549864
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
